# discord-bot

./: .gitignore  Cargo.toml  Dockerfile  bot.js  classifier.json  classifierBayes.json  index.js  package-lock.json  package.json
commands/inviteCommand/: index.js
commands/logCommand/: index.js
commands/pingCommand/: index.js
commands/playCommand/: index.js  soundcloud.js  test.js
commands/playCommand/references/soundstream/: getStreamURL.js
commands/songCommand/: index.js
commands/stopCommand/: index.js
commands/swearCommand/: blacklist.json  classifier.json  classifierBayes.json  clean.json  customSwear.js  index.js  swear.js  swearNaturalize.js  swears.json  test.js  test.json
commands/vaporCommand/: index.js  vaporwave.js
commands/zalgoCommand/: index.js  zalgoify.js
lib/fml/: .gitignore  Cargo.toml  test.txt
lib/fml/src/: lib.rs
lib/fml/tests/: common.rs
lib/nekos/: Cargo.toml
lib/nekos/src/: lib.rs
lib/nekos/tests/: common.rs
lib/reddit/: Cargo.toml
lib/reddit/src/: lib.rs
lib/reddit/tests/: common.rs
lib/urban/: Cargo.toml
lib/urban/src/: lib.rs
lib/urban/tests/: common.rs
lib/xkcd/: Cargo.toml
lib/xkcd/src/: lib.rs
lib/xkcd/tests/: common.rs
old/: logger.js  package.json
old/commands/: Command.js
old/commands/helpCommand/: index.js
old/commands/playCommand/references/soundstream/: getID.js
old/commands/songCommand/references/soundstream/: index.js
old/commands/swearCommand/: classifierBayes.json  clean.json  index.js
old/commands/vaporCommand/: test.js
old/commands/xkcdCommand/: index.js  test.js  xkcd.js
old/commands/zalgoCommand/: index.js
src/: commands.rs  main.rs
src/commands/: fml.rs  groups.rs  nekos.rs  ping.rs  schoology.rs  tic_tac_toe.rs  urban.rs  vaporwave.rs  xkcd.rs  zalgoify.rs
