[package]
name = "discord-bot"
version = "0.0.1"
authors = ["adumbidiot <nathaniel.daniel23@outlook.com>"]
edition = "2018"

[dependencies]
serenity = "0.5"
#serenity = "0.6.0-rc.1" #Command Trait removed completely. Massive refactoring required.
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
zalgo = { git = "https://github.com/adumbidiot/zalgo-rs", rev = "1772ba1d8a0769093f84207ea2e797eacd597629" }
schoology = {git = "https://github.com/adumbidiot/schoology-rs", rev = "ddba133c5d3a24d6f1ef26249fef35960b06b356"}
xkcd = { path = "./lib/xkcd" }
fml = { path = "./lib/fml" }
urban = { path = "./lib/urban"}
ttt = { git = "https://github.com/adumbidiot/TTT", rev = "0d3628ac897636e5ffb613e1cfcce9dfbc1c9764"}

[workspace]
members = [
    "lib/fml",
	"lib/xkcd",
	"lib/urban",
	"lib/reddit",
]